Add fee for buy and sell operation in the right way

Fee should be added to buy and substracted from sell
operations. Difference between balance for banking and investment
account should include fees.

BUG: 361021
REVIEW: 127711